--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome to our homepage</h1>
+<div class = "homepage text-center container-fluid">
+    <h1>Welcome to TheMonkeyRich</h1>
+    <h2>A place where enterprenuers can meet developers</h2>
+</div>
