--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,6 @@
-<h1>The about page</h1>
+<div class = "container-fluid text-center">
+    <h1>About Page</h1>
+    <p>
+        We are TheMonkeyRich. Our company focuses on creating an exclusive community for enterprenuers and developers to meet.
+    </p>
+</div>
