--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,3 +69,12 @@ h1, h2, h3 {
 .navbar {
     border:none;
 }
+
+// Disabling notice
+.alert-notice {
+    display: none;
+}
+
+.home-signup-links {
+    margin-top: 30px;
+}
