--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -70,9 +70,17 @@ h1, h2, h3 {
     border:none;
 }
 
+.flash-container {
+    position: absolute;
+    width: 100%;
+}
+
 // Disabling notice
-.alert-notice {
-    display: none;
+.alert-notice, .alert-alert {
+    text-align; center;
+    background: rgba(255,255,255, 0.3);
+    background-color: rgba(255, 255, 255, 0.5);
+    margin-top: -14px;
 }
 
 .home-signup-links {
