--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,12 +74,11 @@ h1, h2, h3 {
     position: absolute;
     width: 100%;
 }
-
-// Disabling notice
+   
 .alert-notice, .alert-alert {
-    text-align; center;
-    background: rgba(255,255,255, 0.3);
-    background-color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    background: rgba(255, 255, 255, 0.3);
+    border-color: rgba(255, 255, 255, 0.5);
     margin-top: -14px;
 }
 
