--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag "http://js.stripe.com/v2/", type: 'text/javascript' %>
+    <%= javascript_include_tag "http://js.stripe.com/v3/", type: 'text/javascript' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%- tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
+    <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
   </head>
 
   <body>
@@ -28,12 +28,16 @@
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <div class = "nav navbar-nav navbar-right">
             <% if user_signed_in? %>
-              <%= link_to "Log Out", destroy_user_session_path, class: 'btn btn-default navbar-btn' %>
+              <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn btn-default navbar-btn' %>
             <% else %>
               <%= link_to "Log In", new_user_session_path, class: 'btn btn-default navbar-btn' %>
             <% end %>
           </div>
           <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <li><%= link_to "Community", users_path %></li>
+              <li><%= link_to "My Account", edit_user_registration_path %></li>
+            <% end %>
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contact Us", new_contact_path %></li>
           </ul>
