--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class = "container-fluid text-center">
-    <h1>About Page</h1>
+    <h1>About Us</h1>
     <p>
         We are TheMonkeyRich. Our company focuses on creating an exclusive community for enterprenuers and developers to meet.
     </p>
