--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,29 @@
     <h1>Welcome to TheMonkeyRich</h1>
     <h2>A place where enterprenuers can meet developers</h2>
 </div>
-<div class = "container home-signup-links
-">
+<div class = "container home-signup-links">
+    <div class = "row">
+    <% if user_signed_in? %>
+        <div class = "col-md-6">
+            <div class = "well">
+                <h2 class = "text-center">Your Profile</h2>
+                <% if current_user.profile %>
+                    <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
+                    <%= link_to "View your profile", user_path(current_user.id), class: 'btn btn-default btn-lg btn-block' %>
+                <% else %>
+                    <p>Create your profile so that you can share your information with the community. </p>
+                    <%= link_to "Create your profile", new_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
+                <% end %>
+            </div>
+        </div>
+        <div class = "col-md-6">
+            <div class = "well">
+                <h2 class = "text-center">The Community</h2>
+                <p>Visit the community to meet other developers, entrepreneurs, and investors!</p>
+                <%= link_to "Visit the community", users_path, class: 'btn btn-default btn-lg btn-block' %>
+            </div>    
+        </div>
+    <% else %>
     <div class = "col-md-6">
         <div class = "well">
             <h2 class = "text-center">Basic Membership</h2>
@@ -19,4 +40,5 @@
             <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block'  %>
         </div>
     </div>
+    <% end %>
 </div>
